# tools-and-scripts

./: .gitattributes  .gitignore  COMPATIBILITY.md  LICENSE  README.md  TOOL-TEMPLATE.md  check.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
ansible/ssh-key-rotation/: README.md
ansible/ssh-key-rotation/identities/: _identity-template.yml.example
ansible/ssh-key-rotation/inventory/: hosts.yml  hosts.yml.example
ansible/ssh-key-rotation/playbooks/: _load-identity.yml  ssh-identity-onboard.yml  (+2 more)
backup-and-recovery/semaphore-sqlite-guard/: README.md  config.example.toml  configure.py  semaphore_sqlite.py
identity-and-access/ssh-key-rotation/: README.md  ansible.cfg  configure.py  requirements.yml
migrations/teamspeak-channel-migration/: README.md  config.example.toml  configure.py  teamspeak_channels.py
monitoring/prometheus-target-check/: README.md  check_targets.py  config.example.json  configure.py
networking/networkmanager-cutover/: README.md  config.example.conf  configure.sh  networkmanager-cutover.sh  networkmanager-ifupdown-cutover.sh
networkmanager/: README.md  networkmanager-ifupdown-cutover.sh
prometheus/: README.md  __init__.py  check_targets.py  expected-targets.example.json
semaphore/: README.md  __init__.py  semaphore_sqlite.py
teamspeak/: README.md  __init__.py  teamspeak_channels.py
tests/: test_customization_guidance.py  test_documentation.py  test_networkmanager_layout.py  test_prometheus_targets.py  test_repository_contract.py  test_semaphore_sqlite.py  test_ssh_key_validator.py  test_teamspeak_channels.py
(+31 files in other folders)
