[project]
name = "tools-and-scripts"
version = "0.1.0"
description = "Tested operational utilities for infrastructure maintenance"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "PIE", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
